--- a/members.html
+++ b/members.html
@@ -24,9 +24,9 @@
 
     <main class="bg-light">
         <div class="container px-4 py-5" id="featured-3">
-            <div class="row text-center">
+            <div class="text-center">
                 <h1 class="mb-3">ČLENOVÉ</h1>
-                <div id="members"></div>
+                <div class="row" id="members"></div>
               </div>
         </div>
     </main>
