--- a/about-server.html
+++ b/about-server.html
@@ -11,10 +11,10 @@
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <ul class="navbar-nav mx-auto">
           <li class="nav-item active text-center">
-            <a class="nav-link active" href="index.html">DOMOV</a>
+            <a class="nav-link" href="index.html">DOMOV</a>
           </li>
           <li class="nav-item text-center">
-            <a class="nav-link" href="about-server.html">O SERVERU</a>
+            <a class="nav-link active" href="about-server.html">O SERVERU</a>
           </li>
           <li class="nav-item text-center">
             <a class="nav-link" href="members.html">ČLENOVÉ</a>
