--- a/about-server.html
+++ b/about-server.html
@@ -25,7 +25,23 @@
 
     <main class="bg-light">
         <div class="container px-4 py-5" id="featured-3">
+            <div class="row">
+                <div class="col">
+                    <h2>O serveru (NeverLand)</h2>
+                    <p>Dne 28.12.2021 - Spuštěna verze <b>1.18.1</b></p>
 
+                    <p>Dne 30.6.2021 - První spuštění serveru</p>
+                </div>
+                <div class="col">
+                    <h2>Časté dotazy</h2>
+                    <b>Seed Mapy</b>
+                    <p>K čemu by ti byl :)</p>
+                    <b>Pluginy</b>
+                    <p>ProtocolSupport, AmikaCore, Chunky, ChunkyBorder</p>
+                    <b>Datapacky</b>
+                    <p>armor statues, double shulker shells, mob heads, player head drops.</p>
+                </div>
+              </div>
         </div>
     </main>
 
