--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="row g-4 py-5 row-cols-1 row-cols-lg-2">
             <div class="feature col">
               <div class="feature-icon bg-primary bg-gradient">
-                <a href="about-server.html"><img src="assets/img/info.webp" alt="group"></a>
+                <a href="about-server.html"><img src="assets/img/info.webp" height="200" alt="group"></a>
               </div>
               <h2>O SERVERU</h2>
             </div>
