--- a/members.html
+++ b/members.html
@@ -27,6 +27,7 @@
         <div class="container px-4 py-5" id="featured-3">
             <div class="text-center">
                 <h1 class="mb-3">ČLENOVÉ</h1>
+                <p><span id="membersInList"></span></p>
                 <div class="row" id="members"></div>
               </div>
         </div>
