--- a/about-server.html
+++ b/about-server.html
@@ -39,7 +39,12 @@
                     <b>Pluginy</b>
                     <p>ProtocolSupport, AmikaCore, Chunky, ChunkyBorder</p>
                     <b>Datapacky</b>
-                    <p>armor statues, double shulker shells, mob heads, player head drops.</p>
+                    <p>
+                        <li>armor statues - Tento datapack dovoluje manipulovat s objekty</li>
+                        <li>double shulker shells - Tento datapack zdvojnásobuje šanci na drop shulkeru</li>
+                        <li>mob heads - Tento datapack dovoluje aby padali hlavy z mobů</li>
+                        <li>player head drops - Tento dapack dovoluje padání hlav z hráčů</li>
+                    </p>
                 </div>
               </div>
         </div>
