--- a/about-server.html
+++ b/about-server.html
@@ -37,7 +37,7 @@
                     <b>Seed Mapy</b>
                     <p>K čemu by ti byl :)</p>
                     <b>Pluginy</b>
-                    <p>ProtocolSupport, AmikaCore, Chunky, ChunkyBorder</p>
+                    <p>ProtocolSupport, AmikaCore, Chunky, ChunkyBorder a další na optimalizaci...</p>
                     <b>Datapacky</b>
                     <p>
                         <li>armor statues - Tento datapack dovoluje manipulovat s objekty</li>
