--- a/index.html
+++ b/index.html
@@ -1,54 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-100">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="EncryptSL (ETERNITY_ROOT#PATRIK_KOLAŘÍK)">
+    <meta name="keywords" content="encryptsl, minecraft, neverlandmc">
     <title>NeverLand - 1.18.1</title>
     <link rel="icon" href="assets/img/icon.jpg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="/assets/css/main.css" rel="stylesheet">
 </head>
-<body class="bg-dark">
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-        <ul class="navbar-nav mx-auto">
-          <li class="nav-item active text-center">
-            <a class="nav-link active" href="index.html">DOMOV</a>
-          </li>
-          <li class="nav-item text-center">
+<body class="d-flex h-100 text-center text-white bg-dark">
+    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+      <header class="mb-auto">
+        <div>
+          <h3 class="float-md-start mb-0">NEVERLAND</h3>
+          <nav class="nav nav-masthead justify-content-center float-md-end">
+            <a class="nav-link active" aria-current="page" href="index.html">DOMOV</a>
             <a class="nav-link" href="about-server.html">O SERVERU</a>
-          </li>
-          <li class="nav-item text-center">
             <a class="nav-link" href="members.html">ČLENOVÉ</a>
-          </li>
-        </ul>
-    </nav>
-
-    <main class="bg-light text-center">
-        <div class="container px-4 py-5" id="featured-3">
-            <h1>NEVERLAND</h1>
-        <div class="row g-4 py-5 row-cols-1 row-cols-lg-2">
-            <div class="feature col">
-              <div class="feature-icon bg-primary bg-gradient">
-                <a href="about-server.html"><img src="assets/img/info.webp" height="200" alt="group"></a>
-              </div>
-              <h2>O SERVERU</h2>
-            </div>
-            <div class="feature col">
-              <div class="feature-icon bg-primary bg-gradient">
-                <a href="members.html"><img src="assets/img/group.webp" alt="group"></a>
-              </div>
-              <h2>ČLENOVÉ</h2>
-            </div>
+          </nav>
         </div>
-        </div>
-    </main>
-
-    <footer class="bg-dark">
-        <div class="container py-5 text-white">
-            <p><b>&copy; <span id="year"></span></b> neverlandserver.github.io</p>
-        </div>
+      </header>
+    
+      <main class="px-3 text-dark card-box">
+        <img src="/assets/img/logo.webp" title="logo" style="max-width: 500px; width: 100%; margin: 20px 0">
+        <p class="lead text-white">Neverland je privátní minecraft server zaměřující se na vanillu.</p>
+        <p class="lead">
+          <a href="about-server.html" class="btn btn-lg btn-secondary fw-bold border-white bg-white">VÍCE</a>
+        </p>
+      </main>
+    <footer class="mt-auto text-white-50">
+      <p><b>&copy; <span id="year"></span></b> neverlandserver.github.io - Based on Bootstrap template</p>
     </footer>
-
+    </div>
     <script>
         document.getElementById("year").innerHTML = new Date().getFullYear();
     </script>
