--- a/members.html
+++ b/members.html
@@ -7,37 +7,31 @@
     <title>NeverLand - 1.18.1</title>
     <link rel="icon" href="assets/img/icon.jpg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css" integrity="sha512-BnbUDfEUfV0Slx6TunuB042k9tuKe3xrD6q4mg5Ed72LTgzDIcLPxg6yI2gcMFRyomt+yJJxE+zJwNmxki6/RA==" crossorigin="anonymous" referrerpolicy="no-referrer" />  </head>
-<body class="bg-dark">
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-        <ul class="navbar-nav mx-auto">
-          <li class="nav-item active text-center">
-            <a class="nav-link" href="index.html">DOMOV</a>
-          </li>
-          <li class="nav-item text-center">
-            <a class="nav-link" href="about-server.html">O SERVERU</a>
-          </li>
-          <li class="nav-item text-center">
-            <a class="nav-link active" href="members.html">ČLENOVÉ</a>
-          </li>
-        </ul>
-    </nav>
-
-    <main class="bg-light">
-        <div class="container px-4 py-5" id="featured-3">
-            <div class="text-center">
-                <h1 class="mb-3">ČLENOVÉ</h1>
-                <p><span id="membersInList"></span></p>
-                <div class="row" id="members"></div>
-              </div>
-        </div>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css" integrity="sha512-BnbUDfEUfV0Slx6TunuB042k9tuKe3xrD6q4mg5Ed72LTgzDIcLPxg6yI2gcMFRyomt+yJJxE+zJwNmxki6/RA==" crossorigin="anonymous" referrerpolicy="no-referrer" />  
+    <link href="/assets/css/main.css" rel="stylesheet">
+</head>
+<body class="d-flex h-100 text-center text-white bg-dark">
+  <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+    <header class="mb-auto">
+      <div>
+        <h3 class="float-md-start mb-0">NEVERLAND</h3>
+        <nav class="nav nav-masthead justify-content-center float-md-end">
+          <a class="nav-link" href="index.html">DOMOV</a>
+          <a class="nav-link" href="about-server.html">O SERVERU</a>
+          <a class="nav-link active" aria-current="page" href="members.html">ČLENOVÉ</a>
+        </nav>
+      </div>
+    </header>
+    <main class="px-3 text-white my-5">
+      <h1>Členové</h1>
+      <p class="lead"><span id="membersInList"></span></p>
+      <div class="row g-2" id="members"></div>
     </main>
 
-    <footer class="bg-dark">
-        <div class="container py-5 text-white">
-            <p><b>&copy; <span id="year"></span></b> neverlandserver.github.io</p>
-        </div>
+    <footer class="mt-auto text-white-50">
+      <p><b>&copy; <span id="year"></span></b> neverlandserver.github.io - Based on Bootstrap template</p>
     </footer>
+  </div>
 
     <script src="assets/app.js"></script>
     <script>
