--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </p>
       </main>
     <footer class="mt-auto text-white-50">
-      <p><b>&copy; <span id="year"></span></b> neverlandserver.github.io - Based on Bootstrap template</p>
+      <p><b>&copy; <span id="year"></span></b> neverlandserver.github.io - Based on Bootstrap <a href="https://getbootstrap.com/docs/5.1/examples/cover/#">template</a></p>
     </footer>
     </div>
     <script>
