--- a/about-server.html
+++ b/about-server.html
@@ -55,7 +55,7 @@
     </main>
 
     <footer class="mt-auto text-white-50">
-        <p><b>&copy; <span id="year"></span></b> neverlandserver.github.io - Based on Bootstrap template</p>
+        <p><b>&copy; <span id="year"></span></b> neverlandserver.github.io - Based on Bootstrap <a href="https://getbootstrap.com/docs/5.1/examples/cover/#">template</a></p>
     </footer>
     </div>
     <script>
