--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>NeverLand - 1.18.1</title>
     <link rel="icon" href="assets/img/icon.jpg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link href="/assets/css/main.css" rel="stylesheet">
+    <link href="assets/css/main.css" rel="stylesheet">
 </head>
 <body class="d-flex h-100 text-center text-white bg-dark">
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
@@ -25,7 +25,7 @@
       </header>
     
       <main class="px-3 text-dark card-box">
-        <img src="/assets/img/logo.webp" title="logo" style="max-width: 500px; width: 100%; margin: 20px 0">
+        <img src="assets/img/logo.webp" title="logo" style="max-width: 500px; width: 100%; margin: 20px 0">
         <p class="lead text-white">Neverland je privátní minecraft server zaměřující se na vanillu.</p>
         <p class="lead">
           <a href="about-server.html" class="btn btn-lg btn-secondary fw-bold border-white bg-white">VÍCE</a>
