--- a/about-server.html
+++ b/about-server.html
@@ -27,7 +27,7 @@
         <div class="container px-4 py-5 card-box text-start" id="featured-3">
             <div class="row">
                 <div class="col">
-                    <h2>Historie</h2>
+                    <h2><img src="assets/img/emerald.webp" alt="emerald" height="32">Historie</h2>
                     <p>Dne 3.1.2022 - Zabit druhý drak po resetu endu.</p>
                     <p>Dne 28.12.2021 - Spuštěna verze <b>1.18.1</b> a resetován end.</p>
                     <p>Dne 11.12.2021 - Spuštěn projekt stavba metra a design. <b>Author Metra Korspeed a další..</b></p>
@@ -35,7 +35,7 @@
                     <p>Dne 30.6.2021 - První spuštění serveru.</p>
                 </div>
                 <div class="col">
-                    <h2>Časté dotazy</h2>
+                    <h2><img src="assets/img/ask.webp" alt="emerald" height="32"> Časté dotazy</h2>
                     <b>Hosting</b>
                     <p>Kočkopes... tajné</p>
                     <b>Seed Mapy</b>
