--- a/members.html
+++ b/members.html
@@ -25,7 +25,7 @@
     <main class="px-3 text-white my-5">
       <h1>Členové</h1>
       <p class="lead"><span id="membersInList"></span></p>
-      <div class="row g-2" id="members"></div>
+      <div class="row g-2 justify-content-between" id="members"></div>
     </main>
 
     <footer class="mt-auto text-white-50">
