Update history of server

--- a/about-server.html
+++ b/about-server.html
@@ -28,6 +28,7 @@
             <div class="row">
                 <div class="col">
                     <h2><img src="assets/img/emerald.webp" alt="emerald" height="32">Historie</h2>
+                    <p>Dne 31.1.2022 - Dokončen Projekt metro a nether spawn.</p>
                     <p>Dne 3.1.2022 - Zabit druhý drak po resetu endu.</p>
                     <p>Dne 28.12.2021 - Spuštěna verze <b>1.18.1</b> a resetován end.</p>
                     <p>Dne 11.12.2021 - Spuštěn projekt stavba metra a design. <b>Author Metra Korspeed a další..</b></p>
