--- a/index.html
+++ b/index.html
@@ -9,34 +9,282 @@
     <title>NeverLand - 1.18.1</title>
     <link rel="icon" href="assets/img/icon.jpg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"/>
     <link href="assets/css/main.css" rel="stylesheet">
 </head>
-<body class="d-flex h-100 text-center text-white bg-dark">
-    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-      <header class="mb-auto">
-        <div>
-          <h3 class="float-md-start mb-0">NEVERLAND</h3>
-          <nav class="nav nav-masthead justify-content-center float-md-end">
-            <a class="nav-link active" aria-current="page" href="index.html">DOMOV</a>
-            <a class="nav-link" href="about-server.html">O SERVERU</a>
-            <a class="nav-link" href="members.html">ČLENOVÉ</a>
-          </nav>
-        </div>
-      </header>
-    
-      <main class="px-3 text-dark card-box">
-        <img src="assets/img/logo.webp" title="logo" style="max-width: 500px; width: 100%; margin: 20px 0">
-        <p class="lead text-white">Neverland je privátní minecraft server zaměřující se na vanillu.</p>
-        <p class="lead">
-          <a href="about-server.html" class="btn btn-lg btn-secondary fw-bold border-white bg-white">VÍCE</a>
-        </p>
-      </main>
-    <footer class="mt-auto text-white-50">
-      <p><b>&copy; <span id="year"></span></b> neverlandserver.github.io - Based on Bootstrap <a href="https://getbootstrap.com/docs/5.1/examples/cover/#">template</a></p>
-    </footer>
+<body>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
+    <div class="container">
+      <a href="#" class="navbar-brand">NEVERLAND CZ/SK</a>
+
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navmenu"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navmenu">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a href="#aboutserver" class="nav-link">O SERVERU</a>
+          </li>
+          <li class="nav-item">
+            <a href="#questions" class="nav-link">FAQ</a>
+          </li>
+          <li class="nav-item">
+            <a href="#memberlist" class="nav-link">ČLENOVÉ</a>
+          </li>
+        </ul>
+      </div>
     </div>
-    <script>
-        document.getElementById("year").innerHTML = new Date().getFullYear();
-    </script>
+  </nav>
+
+  <!-- Showcase -->
+  <section
+    class="bg-dark text-light p-5 p-lg-0 pt-lg-5 text-center text-sm-start"
+  >
+    <div class="container">
+      <div class="d-sm-flex align-items-center justify-content-between">
+        <div>
+          <h1>NeverLand <span class="text-warning">CZ/SK</span></h1>
+          <p class="lead my-4">
+            Privátní whitelist server zaměřený na především survival/vanillu.
+            Server původně vytvořen pro zábavu od práce a kamarády kteří rádi tvoří něco pěkného společně.
+          </p>
+        </div>
+        <div id="randomAv"></div>
+        <!--<img
+          class="img-fluid w-40 d-none d-sm-block"
+          src="assets/img/ask.webp"
+          alt="hero_m"
+        />-->
+      </div>
+    </div>
+  </section>
+
+  <!-- Boxes -->
+  <section class="p-5">
+    <div class="container">
+      <div class="row text-center g-4">
+        <div class="col-md">
+          <div class="card bg-warning text-dark">
+            <div class="card-body text-center">
+              <div class="h1 mb-3">
+                <i class="bi bi-tools"></i>
+              </div>
+              <h3 class="card-title mb-3">CUSTOM PLUGINY</h3>
+              <p class="card-text">
+                Na serveru máme vlastní pluginy a systém.
+                Který navzájem respektujeme.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md">
+          <div class="card bg-secondary text-light">
+            <div class="card-body text-center">
+              <div class="h1 mb-3">
+                <i class="bi bi-laptop"></i>
+              </div>
+              <h3 class="card-title mb-3">HOSTING</h3>
+              <p class="card-text">
+                Hostujeme na stroji který nám vystačí na naše náročné projekty a potřeby.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md">
+          <div class="card bg-primary text-light">
+            <div class="card-body text-center">
+              <div class="h1 mb-3">
+                <i class="bi bi-people"></i>
+              </div>
+              <h3 class="card-title mb-3">WHITELIST</h3>
+              <p class="card-text">
+                Server je soukromý a proto se na něj dostane méně hráčů.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="aboutserver" class="p-5 bg-dark text-light">
+    <div class="container">
+      <div class="row align-items-center justify-content-between">
+        <div class="col-md">
+          <img src="assets/img/emerald.webp" width="400" height="400" class="img-fluid" alt="emerald" />
+        </div>
+        <div class="col-md p-5">
+          <h2>Historie Serveru</h2>
+          <p class="lead">
+            Soupiska historie co se na serveru stala.
+          </p>
+          <p>Dne 31.1.2022 - Dokončen Projekt metro a nether spawn.</p>
+          <p>Dne 3.1.2022 - Zabit druhý drak po resetu endu.</p>
+          <p>Dne 28.12.2021 - Spuštěna verze <b>1.18.1</b> a resetován end.</p>
+          <p>Dne 11.12.2021 - Spuštěn projekt stavba metra a design. <b>Author Metra Korspeed a další..</b></p>
+          <o>Dne 8.7.2021 - Zabit první drak na serveru.</o>
+          <p>Dne 30.6.2021 - První spuštění serveru.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Question Accordion -->
+  <section id="questions" class="p-5">
+    <div class="container">
+      <h2 class="text-center mb-4">Časté dotazy</h2>
+      <div class="accordion accordion-flush" id="questions">
+        <!-- Item 1 -->
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button
+              class="accordion-button collapsed"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#question-one"
+            >
+              Pluginy
+            </button>
+          </h2>
+          <div
+            id="question-one"
+            class="accordion-collapse collapse"
+            data-bs-parent="#questions"
+          >
+            <div class="accordion-body">
+              ProtocolSupport, EchelonCore, Chunky, ChunkyBorder a další...
+            </div>
+          </div>
+        </div>
+        <!-- Item 2 -->
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button
+              class="accordion-button collapsed"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#question-two"
+            >
+             Datapacky
+            </button>
+          </h2>
+          <div
+            id="question-two"
+            class="accordion-collapse collapse"
+            data-bs-parent="#questions"
+          >
+            <div class="accordion-body">
+              <li>armor statues - Tento datapack dovoluje manipulovat s objekty</li>
+              <li>double shulker shells - Tento datapack zdvojnásobuje šanci na drop shulkeru</li>
+              <li>mob heads - Tento datapack dovoluje aby padali hlavy z mobů</li>
+              <li>player head drops - Tento dapack dovoluje padání hlav z hráčů</li>
+            </div>
+          </div>
+        </div>
+        <!-- Item 3 -->
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button
+              class="accordion-button collapsed"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#question-three"
+            >
+              Hosting
+            </button>
+          </h2>
+          <div
+            id="question-three"
+            class="accordion-collapse collapse"
+            data-bs-parent="#questions"
+          >
+            <div class="accordion-body">
+              Hostujeme na českém kvalitním hostingu víc nic nepotřebuješ vědět.
+            </div>
+          </div>
+        </div>
+        <!-- Item 4 -->
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button
+              class="accordion-button collapsed"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#question-four"
+            >
+              Jak se dostat na server
+            </button>
+          </h2>
+          <div
+            id="question-four"
+            class="accordion-collapse collapse"
+            data-bs-parent="#questions"
+          >
+            <div class="accordion-body">
+              Bohužel server je soukromý a vybíráme si z řad veřejnosti případně kamarádů.
+            </div>
+          </div>
+        </div>
+        <!-- Item 5 -->
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button
+              class="accordion-button collapsed"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#question-five"
+            >
+              Seed mapy
+            </button>
+          </h2>
+          <div
+            id="question-five"
+            class="accordion-collapse collapse"
+            data-bs-parent="#questions"
+          >
+            <div class="accordion-body">
+              Seed mapy nedáváme.
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="memberlist" class="p-5 bg-primary">
+    <div class="container">
+      <h2 class="text-center text-white">ČLENOVÉ SERVERU</h2>
+      <p class="lead text-center text-white mb-5">
+        <span id="membersInList"></span>
+      </p>
+      <div class="row g-4" id="members"></div>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="p-5 bg-dark text-white text-center position-relative">
+    <div class="container">
+      <p class="lead">Copyright &copy; <span id="year"></span> NeverLand CZ/SK</p>
+
+      <a href="#" class="position-absolute bottom-0 end-0 p-5">
+        <i class="bi bi-arrow-up-circle h1"></i>
+      </a>
+    </div>
+  </footer>
+
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+    crossorigin="anonymous"
+  ></script>
+  <script src="assets/app.js"></script>
+  <script>document.getElementById("year").innerHTML = new Date().getFullYear();</script>
 </body>
 </html>
