--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <a href="#aboutserver" class="nav-link">O SERVERU</a>
           </li>
           <li class="nav-item">
-            <a href="#questions" class="nav-link">FAQ</a>
+            <a href="#faq" class="nav-link">FAQ</a>
           </li>
           <li class="nav-item">
             <a href="#memberlist" class="nav-link">ČLENOVÉ</a>
@@ -140,7 +140,7 @@
   <section id="questions" class="p-5">
     <div class="container">
       <h2 class="text-center mb-4">Časté dotazy</h2>
-      <div class="accordion accordion-flush" id="questions">
+      <div class="accordion accordion-flush" id="faq">
         <!-- Item 1 -->
         <div class="accordion-item">
           <h2 class="accordion-header">
