--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
   </section>
 
   <!-- Question Accordion -->
-  <section id="questions" class="p-5">
+  <section id="faq" class="p-5">
     <div class="container">
       <h2 class="text-center mb-4">Časté dotazy</h2>
-      <div class="accordion accordion-flush" id="faq">
+      <div class="accordion accordion-flush" id="questions">
         <!-- Item 1 -->
         <div class="accordion-item">
           <h2 class="accordion-header">
