--- a/index.html
+++ b/index.html
@@ -125,12 +125,74 @@
           <p class="lead">
             Soupiska historie co se na serveru stala.
           </p>
-          <p>Dne 31.1.2022 - Dokončen Projekt metro a nether spawn.</p>
-          <p>Dne 3.1.2022 - Zabit druhý drak po resetu endu.</p>
-          <p>Dne 28.12.2021 - Spuštěna verze <b>1.18.1</b> a resetován end.</p>
-          <p>Dne 11.12.2021 - Spuštěn projekt stavba metra a design. <b>Author Metra Korspeed a další..</b></p>
-          <o>Dne 8.7.2021 - Zabit první drak na serveru.</o>
-          <p>Dne 30.6.2021 - První spuštění serveru.</p>
+          <div class="vertical-timeline vertical-timeline--animate vertical-timeline--one-column">
+            <div class="vertical-timeline-item vertical-timeline-element">
+                <div>
+                    <span class="vertical-timeline-element-icon bounce-in">
+                        <i class="badge badge-dot badge-dot-xl bg-success"> </i>
+                    </span>
+                    <div class="vertical-timeline-element-content bounce-in">
+                        <p>Dokončen Projekt metro a nether spawn.</p>
+                        <span class="vertical-timeline-element-date">31.1.2022</span>
+                    </div>
+                </div>
+            </div>
+            <div class="vertical-timeline-item vertical-timeline-element">
+                <div>
+                    <span class="vertical-timeline-element-icon bounce-in">
+                        <i class="badge badge-dot badge-dot-xl bg-success"> </i>
+                    </span>
+                    <div class="vertical-timeline-element-content bounce-in">
+                      <p>Zabit druhý drak po resetu endu.</p>
+                        <span class="vertical-timeline-element-date">3.1.2022</span>
+                    </div>
+                </div>
+            </div>
+            <div class="vertical-timeline-item vertical-timeline-element">
+                <div>
+                    <span class="vertical-timeline-element-icon bounce-in">
+                        <i class="badge badge-dot badge-dot-xl bg-success"> </i>
+                    </span>
+                    <div class="vertical-timeline-element-content bounce-in">
+                      <p>Spuštěna verze <b>1.18.1</b> a resetován end.</p>
+                        <span class="vertical-timeline-element-date">28.12.2021</span>
+                    </div>
+                </div>
+            </div>
+            <div class="vertical-timeline-item vertical-timeline-element">
+                <div>
+                    <span class="vertical-timeline-element-icon bounce-in">
+                        <i class="badge badge-dot badge-dot-xl bg-success"> </i>
+                    </span>
+                    <div class="vertical-timeline-element-content bounce-in">
+                      <p>Spuštěn projekt stavba metra a design. <b>Author Metra Korspeed a další..</b></p>
+                        <span class="vertical-timeline-element-date">11.12.2021</span>
+                    </div>
+                </div>
+            </div>
+            <div class="vertical-timeline-item vertical-timeline-element">
+                <div>
+                    <span class="vertical-timeline-element-icon bounce-in">
+                        <i class="badge badge-dot badge-dot-xl bg-success"> </i>
+                    </span>
+                    <div class="vertical-timeline-element-content bounce-in">
+                      <p>Zabit první drak na serveru.</p>
+                        <span class="vertical-timeline-element-date">8.7.2021</span>
+                    </div>
+                </div>
+            </div>
+            <div class="vertical-timeline-item vertical-timeline-element">
+                <div>
+                    <span class="vertical-timeline-element-icon bounce-in">
+                        <i class="badge badge-dot badge-dot-xl bg-warning"> </i>
+                    </span>
+                    <div class="vertical-timeline-element-content bounce-in">
+                      <p>Dne 30.6.2021 - První spuštění serveru.</p>
+                        <span class="vertical-timeline-element-date">30.6.2021</span>
+                    </div>
+                </div>
+            </div>
+        </div>
         </div>
       </div>
     </div>
