Added Donate Button

--- a/index.html
+++ b/index.html
@@ -66,6 +66,20 @@
     </div>
   </section>
 
+  <section class="bg-primary text-light p-5">
+    <div class="container">
+      <div class="d-md-flex justify-content-between align-items-center">
+        <h3 class="mb-3 mb-md-0">DOBROVOLNÝ PŘÍSPĚVEK SERVERU</h3>
+        <div class="donate">
+          <form action="https://www.paypal.com/donate" method="post" target="_top">
+            <input type="hidden" name="hosted_button_id" value="LWS7RACNMSNH6" />
+            <button type="submit" class="btn btn-warning btn-lg" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button">DONATE</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- Boxes -->
   <section class="p-5">
     <div class="container">
