--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
     <div class="container">
-      <a href="#" class="navbar-brand">NEVERLAND CZ/SK</a>
+      <a href="#" class="navbar-brand">NEVERLAND CZ/SK | SEZÓNA 2</a>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
         <span class="navbar-toggler-icon"></span>
@@ -58,10 +58,10 @@
     </div>
   </section>
 
-  <section class="bg-danger text-light p-5">
+  <section class="bg-success text-light p-5">
     <div class="container">
       <div class="d-md-flex justify-content-between align-items-center">
-        <h3 class="mb-3 mb-md-0"><i class="bi bi-info-circle-fill"></i> NOVÁ SEZÓNA JIŽ BRZY NA NAŠEM SERVERU</h3>
+        <h3 class="mb-3 mb-md-0"><i class="bi bi-info-circle-fill"></i> SEZÓNA 2 ZAČALA</h3>
       </div>
     </div>
   </section>
@@ -141,6 +141,28 @@
             Soupiska historie co se na serveru stala.
           </p>
           <div class="vertical-timeline vertical-timeline--animate vertical-timeline--one-column">
+            <div class="vertical-timeline-item vertical-timeline-element">
+              <div>
+                <span class="vertical-timeline-element-icon bounce-in">
+                  <i class="badge badge-dot badge-dot-xl bg-success"> </i>
+                </span>
+                <div class="vertical-timeline-element-content bounce-in">
+                  <p>Začátek sezóny 2.</p>
+                  <span class="vertical-timeline-element-date">14.6.2022</span>
+                </div>
+              </div>
+            </div>
+            <div class="vertical-timeline-item vertical-timeline-element">
+              <div>
+                <span class="vertical-timeline-element-icon bounce-in">
+                  <i class="badge badge-dot badge-dot-xl bg-success"> </i>
+                </span>
+                <div class="vertical-timeline-element-content bounce-in">
+                  <p>Konec sezóny 1.</p>
+                  <span class="vertical-timeline-element-date">11.6.2022</span>
+                </div>
+              </div>
+            </div>
             <div class="vertical-timeline-item vertical-timeline-element">
               <div>
                 <span class="vertical-timeline-element-icon bounce-in">
@@ -228,7 +250,7 @@
           </h2>
           <div id="question-one" class="accordion-collapse collapse" data-bs-parent="#questions">
             <div class="accordion-body">
-              ProtocolSupport, EchelonCore, Chunky, ChunkyBorder a další...
+              EchelonCore, Chunky, ChunkyBorder, VoiceChat
             </div>
           </div>
         </div>
@@ -244,8 +266,6 @@
             <div class="accordion-body">
               <li>armor statues - Tento datapack dovoluje manipulovat s objekty</li>
               <li>double shulker shells - Tento datapack zdvojnásobuje šanci na drop shulkeru</li>
-              <li>mob heads - Tento datapack dovoluje aby padali hlavy z mobů</li>
-              <li>player head drops - Tento dapack dovoluje padání hlav z hráčů</li>
             </div>
           </div>
         </div>
@@ -299,10 +319,9 @@
     <div class="container">
       <h2 class="text-center text-white">ČLENOVÉ SERVERU</h2>
       <p class="lead text-center text-white mb-5">
-        <!-- <span id="membersInList"></span> -->
+        <span id="membersInList"></span>
       </p>
-      <div class="h1 text-center">...JIŽ BRZY...</div>
-      <!-- <div class="row g-4" id="members"></div> -->
+      <div class="row g-4" id="members"></div>
     </div>
   </section>
 
