--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
           <form action="https://www.paypal.com/donate" method="post" target="_top">
             <input type="hidden" name="hosted_button_id" value="LWS7RACNMSNH6" />
             <button type="submit" class="btn btn-warning btn-lg" name="submit"
-              title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button"><i class="bi bi-cash-coin"></i> DONATE</button>
+              title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button"><i
+                class="bi bi-cash-coin"></i> DONATE</button>
           </form>
         </div>
       </div>
@@ -338,6 +339,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha256-JRXjfu4x9e89ZZsh3MhNxupzKwaHLaUQeLW1Jt40wME=" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="assets/app.js"></script>
   <script>document.getElementById("year").innerHTML = new Date().getFullYear();</script>
 </body>
